test/Neg/termina/var_assignment/test4.fin
function f (n : u8) -> u8 {
    let foo : u8 = n;
    foo = foo + 32;
    return foo;
}

